<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DAY05"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/nama_pembeli"
            android:text=" "/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextKodeBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/kode_barang"
            android:text=" "/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextJumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/jumlah_barang"
            android:inputType="number"
            android:text=" "/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="26dp"
        android:text="@string/member"/>

    <RadioGroup
        android:id="@+id/radioGroupMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gold" />

        <RadioButton
            android:id="@+id/radioButtonSilver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silver" />

        <RadioButton
            android:id="@+id/radioButtonBiasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biasa" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonHitungTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/hitung_total" />

</LinearLayout>
